# dubarr

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  audio_processor.py  config.py  docker-compose.yml  entrypoint.sh  llm_engine.py  main.py  monitor.py  prompts.py  pyproject.toml  pyproject.toml.tmp  server.py  standalone_f5.py  tasks.txt  test_cli.sh  tts_engine.py  tts_manager.py  tts_server.py  utils.py  verify_output.py
.github/workflows/: docker-publish.yml  pipeline.yml  qa.yml
scripts/: generate_demo.sh  smoke_test.py  test_llm.py
specification/: ARCHITECTURE.md
specification/specs/: 001_video_processing_pipeline.md  002_synchronization_engine.md  003_task_management.md  004_api_interface.md  005_deployment_and_configuration.md
src/: audio_processor.py  config.py  llm_engine.py  main.py  monitor.py  prompts.py  server.py  standalone_f5.py  tts_engine.py  tts_manager.py  tts_server.py  verify_output.py
src/api/: server.py
src/core/: audio.py  diarization_engine.py  gpu_manager.py  gpu_services.py  llm_engine.py  pipeline.py  synchronizer.py  tts_manager.py  whisper_engine.py  worker.py
src/infrastructure/: database.py  ffmpeg.py  monitor.py  tts_client.py
src/templates/: index.html
templates/: index.html
tests/: test_api.py  test_audio.py  test_database.py  test_ffmpeg.py  test_gpu_services.py  test_llm_engine.py  test_monitor.py  test_pipeline.py  test_synchronizer.py  test_tts_client.py  test_tts_manager.py  test_tts_stability.py  test_utils.py  test_worker.py
