[project]
name = "dubarr"
version = "0.1.0"
description = "AI Audio Dubbing Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
runtime = [
    "hf_transfer",
    "syllables",
    "humanfriendly",
    "psutil",
    "demucs",
    "huggingface-hub<0.24",
    "pyannote.audio==3.1.1",
    "diffq",
    "faster-whisper",
    "transformers==4.40.0",
    "TTS",
]
