[project]
name = "dubarr"
version = "0.1.0"
description = "AI Audio Dubbing Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "langdetect>=1.0.9",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "syllables>=1.1.5",
]
runtime = [
    "hf_transfer",
    "syllables",
    "humanfriendly",
    "psutil",
    "demucs",
    "huggingface-hub<0.24",
    "pyannote.audio==3.1.1",
    "diffq",
    "faster-whisper",
    "transformers==4.40.0",
    "TTS",
]

[tool.ruff]
exclude = [".venv", "__pycache__", "build", "dist"]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.pylint.master]
ignore = [".venv"]

[tool.pylint.messages_control]
disable = ["C", "R", "W", "import-error", "line-too-long"]
